--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/practicaljwt
+#spring.datasource.username=ENC(xbTjW7zdAylu69mbh7X8DQ==)
+#spring.datasource.password=ENC(ADoYuBnpXbjoOVc8czRChQ==)
+spring.datasource.username=root
+spring.datasource.password=
 
+spring.jasypt.cred=protectedString
